--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -21,8 +21,8 @@
             <%= article.createdAt.toLocaleDateString() %>
           </div>
           <div class="card-text mb-2"><%= article.markdown %></div>
-          <a href="articles/<%= article.slug %>" class="btn btn-success">Read More</a>
-          <a href="articles/edit/<%= article.id %>" class="btn btn-info">Edit</a>
+          <a href="articles/<%= article.slug %>" class="btn btn-success">Read Blog</a>
+          
           
         </div>
       </div>
